Fix player motto overflowing

--- a/src/components/pages/ServerDetailsPage.scss
+++ b/src/components/pages/ServerDetailsPage.scss
@@ -152,6 +152,7 @@ div.content{
 }
 
 .players table td:first-child{
+  word-break: break-all;
   white-space: normal;
 }
 
